fix scrollbar stylings when hovered

--- a/frontend/src/scss/base.scss
+++ b/frontend/src/scss/base.scss
@@ -83,7 +83,7 @@ $footer-nav-height--md: 15%;
   border-radius: 50px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: #ffffff;
+  background: var(--color__scrollbar-thumb);
 }
 ::-webkit-scrollbar-thumb:active {
   background: #000000;
@@ -93,11 +93,9 @@ $footer-nav-height--md: 15%;
   border: 0px none #ffffff;
   border-radius: 50px;
 }
-::-webkit-scrollbar-track:hover {
-  background: #666666;
-}
+::-webkit-scrollbar-track:hover,
 ::-webkit-scrollbar-track:active {
-  background: #333333;
+  background: transparent;
 }
 ::-webkit-scrollbar-corner {
   background: transparent;
